# persian-localizations

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/: persian_localizations.py
src/persian_localizations/: __init__.py
tests/: internal_test.py  main_test.py
